FC-105 - [fortress-core] - use valueof instead of new for binary numbers